# respectrum

./: .gitignore  Cargo.toml  NOTES.txt
color_clash/: Cargo.toml  NOTES.md
color_clash/src/: main.rs
color_clash/src/models/: attributes.rs  frame_buffer.rs  mod.rs  video_mode.rs
color_clash/src/palette/: blending.rs  color.rs  mod.rs  zx_color.rs
color_clash/src/types/: attributes.rs  mod.rs
color_clash/src/widgets/: frame_buffer.rs  frame_buffer_view.rs  mod.rs  z_stack.rs
docs/: z80ins.txt
librespectrum/: Cargo.toml
librespectrum/src/: lib.rs
librespectrum/tests/: disassembler_tests.rs
respectrum-gui/: Cargo.toml
respectrum-gui/src/: emul.rs
respectrum-tools/: Cargo.toml
respectrum-tools/src/: disasm.rs
respectrum_egui/: Cargo.toml
respectrum_egui/src/: emul.rs
respectrum_gui/: Cargo.toml
respectrum_gui/src/: emul.rs
respectrum_iced/: Cargo.toml
respectrum_iced/src/: emul.rs
respectrum_tools/: Cargo.toml
respectrum_tools/src/: disasm.rs
spec/: z80code.txt  z80ins.txt
src/: architecture.md  cpu.rs  disasm.rs  display.rs  emul.rs  lib.rs  main.bak.rs  main.rs  memory.rs
src/bus/: bus_line.rs  clock.rs  cpu_bus.rs  device.rs  mod.rs  task.rs  zx48_memory.rs
src/cpu/: alu.rs  cpu.rs  cpu_device.rs  cpu_state.rs  decoder.rs  disassembler.rs  executor.rs  flags.rs  mod.rs  operation.rs  tokens.rs
src/misc/: macros.rs
src/tools/: cpu_instruction.rs  disassembler.rs  instruction_formatter.rs  macros.rs  mod.rs  operation.rs
src/types/: mod.rs  word.rs
test/: disassm.lst
tests/: disassembler_tests.rs
(+57 files in other folders)
