[package]
name = "respectrum"
version = "0.1.0"
authors = ["Andrey Tselishchev <vorteq@gmail.com>"]
edition = "2018"
description = "ZX Spectrum emulator written in Rust"
repository = "https://github.com/rust-lang/cargo/"
license = "MIT"
keywords = ["zx", "spectrum", "emulator"]
categories = ["emulators"]

[dependencies]
bitflags = "1.2.1"
