[package]
name = "respectrum"
version = "0.1.0"
authors = ["Andrey Tselishchev <vorteq@gmail.com>"]
edition = "2018"
description = "ZX Spectrum emulator written in Rust"
repository = "https://github.com/rust-lang/cargo/"
license = "MIT"
keywords = ["zx", "spectrum", "emulator"]
categories = ["emulators"]
default-run = "emul"

[[bin]]
name = "disasm"
path = "src/disasm.rs"

[[bin]]
name = "emul"
path = "src/emul.rs"

[dependencies]
bitflags = "1.2.1"
