[package]
name = "color_clash"
version = "0.1.0"
authors = ["Andrey Tselishchev <vorteq@gmail.com>"]
edition = "2021"

[[bin]]
name = "cc"
path = "src/main.rs"

[dependencies]
bitflags = "1"
bitvec = "1"
clap = { version = "3", features = ["derive"] }
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
